// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`expand renderCodeAndResponse should be render correctly 1`] = `
Object {
  "background": "rgb(51, 55, 58)",
  "border": "1px solid #0f0f0f",
}
`;

exports[`expand renderCodeAndResponse should be render correctly 2`] = `
Object {
  "background": "rgb(51, 55, 58)",
  "border": "1px solid #0f0f0f",
  "height": "100%",
  "left": 0,
  "position": "absolute",
  "width": "100%",
}
`;
